docs/apache-airflow-providers-google/8.2.0/_sources/_api/tests/system/providers/google/cloud/dataproc/example_dataproc_cluster_generator/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.dataproc.example_dataproc_cluster_generator`
=========================================================================================

.. py:module:: tests.system.providers.google.cloud.dataproc.example_dataproc_cluster_generator

.. autoapi-nested-parse::

   Example Airflow DAG testing Dataproc
   operators for managing a cluster and submitting jobs.



Module Contents
---------------

.. py:data:: ENV_ID
   

   

.. py:data:: DAG_ID
   :annotation: = dataproc_cluster_generation

   

.. py:data:: PROJECT_ID
   

   

.. py:data:: BUCKET_NAME
   

   

.. py:data:: CLUSTER_NAME
   

   

.. py:data:: REGION
   :annotation: = europe-west1

   

.. py:data:: ZONE
   :annotation: = europe-west1-b

   

.. py:data:: INIT_FILE_SRC
   

   

.. py:data:: INIT_FILE
   :annotation: = pip-install.sh

   

.. py:data:: CLUSTER_GENERATOR_CONFIG
   

   

.. py:data:: TIMEOUT
   

   

.. py:data:: create_bucket
   

   

.. py:data:: test_run
   

   

