docs/apache-airflow-providers-google/10.22.0/_sources/_api/tests/system/providers/google/cloud/dataproc/example_dataproc_cluster_generator/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.dataproc.example_dataproc_cluster_generator`
=========================================================================================

.. py:module:: tests.system.providers.google.cloud.dataproc.example_dataproc_cluster_generator

.. autoapi-nested-parse::

   Example Airflow DAG testing Dataproc
   operators for managing a cluster and submitting jobs.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: DAG_ID
   :value: 'dataproc_cluster_generation'

   

.. py:data:: PROJECT_ID

   

.. py:data:: BUCKET_NAME

   

.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'

   

.. py:data:: INIT_FILE
   :value: 'pip-install.sh'

   

.. py:data:: GCS_INIT_FILE

   

.. py:data:: CLUSTER_NAME_BASE

   

.. py:data:: CLUSTER_NAME_FULL

   

.. py:data:: CLUSTER_NAME

   

.. py:data:: REGION
   :value: 'us-east4'

   

.. py:data:: ZONE
   :value: 'us-east4-a'

   

.. py:data:: CLUSTER_GENERATOR_CONFIG

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

